refactor: upgrade to Java 17 conventions
Signed-off-by: Andrew Berezovskyi <andriib@kth.se>