@@ -319,7 +319,7 @@ public abstract class CreationAndUpdateBaseTests extends TestsBase {
         // Assert that an invalid PUT resulted in a 4xx status
         final int status = resp.getStatusLine().getStatusCode();
         assertTrue(
-                String.format("Expected a 4xx status code, but got %s.%n", resp.getStatusLine()),
+                "Expected a 4xx status code, but got %s.%n".formatted(resp.getStatusLine()),
                 status >= 400 && status <= 499);
 
         // Clean up after the test by attempting to delete the created resource
@@ -379,7 +379,7 @@ public abstract class CreationAndUpdateBaseTests extends TestsBase {
         HttpResponse resp = doPost(contentType, accept, createContent);
 
         if (logger.isDebugEnabled()) {
-            logger.debug(String.format("HTTP Response: %s", resp.getStatusLine()));
+            logger.debug("HTTP Response: %s".formatted(resp.getStatusLine()));
             byte[] content = IOUtils.getStreamAsByteArray(resp.getEntity().getContent());
             logger.debug(new String(content, "UTF-8"));
         } else {
